@@ -6,6 +6,9 @@ import jakarta.persistence.EntityManager;
 
 import no.nav.foreldrepenger.los.DBTestUtil;
 
+import no.nav.foreldrepenger.los.oppgave.FagsakYtelseType;
+import no.nav.foreldrepenger.los.oppgavekø.FiltreringAndreKriterierType;
+
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -14,7 +17,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import no.nav.foreldrepenger.los.JpaExtension;
 import no.nav.foreldrepenger.los.oppgave.AndreKriterierType;
 import no.nav.foreldrepenger.los.oppgave.BehandlingType;
-import no.nav.foreldrepenger.los.oppgave.FagsakYtelseType;
 import no.nav.foreldrepenger.los.oppgave.OppgaveRepository;
 import no.nav.foreldrepenger.los.oppgavekø.KøSortering;
 import no.nav.foreldrepenger.los.oppgavekø.OppgaveFiltrering;
@@ -39,11 +41,11 @@ class AvdelingslederTjenesteTest {
     @Test
     void testLagNyListe() {
         avdelingslederTjeneste.lagNyOppgaveFiltrering(Avdeling.AVDELING_DRAMMEN_ENHET);
-        var oppgaveFiltreringer = oppgaveRepository.hentAlleOppgaveFilterSettTilknyttetAvdeling(avdelingDrammen().getId());
+        var oppgaveFiltreringer = oppgaveRepository.hentAlleOppgaveFilterSettTilknyttetEnhet(Avdeling.AVDELING_DRAMMEN_ENHET);
         assertThat(oppgaveFiltreringer).isNotNull();
-        assertThat(oppgaveFiltreringer.get(0).getId()).isNotNull();
-        assertThat(oppgaveFiltreringer.get(0).getNavn()).isEqualTo("Ny liste");
-        assertThat(oppgaveFiltreringer.get(0).getAvdeling()).isEqualTo(avdelingDrammen());
+        assertThat(oppgaveFiltreringer.getFirst().getId()).isNotNull();
+        assertThat(oppgaveFiltreringer.getFirst().getNavn()).isEqualTo("Ny liste");
+        assertThat(oppgaveFiltreringer.getFirst().getAvdeling()).isEqualTo(avdelingDrammen());
     }
 
     private Avdeling avdelingDrammen() {
@@ -70,16 +72,40 @@ class AvdelingslederTjenesteTest {
         persistAndFlush(liste);
         avdelingslederTjeneste.slettOppgaveFiltrering(liste.getId());
         entityManager.flush();
-        assertThat(oppgaveRepository.hentAlleOppgaveFilterSettTilknyttetAvdeling(avdelingDrammen().getId())).isEmpty();
+        assertThat(oppgaveRepository.hentAlleOppgaveFilterSettTilknyttetEnhet(Avdeling.AVDELING_DRAMMEN_ENHET)).isEmpty();
     }
 
     @Test
     void testSettSorteringPåListe() {
         var liste = OppgaveFiltrering.nyTomOppgaveFiltrering(avdelingDrammen());
         persistAndFlush(liste);
-        avdelingslederTjeneste.settSortering(liste.getId(), KøSortering.BEHANDLINGSFRIST);
+        avdelingslederTjeneste.settSortering(liste.getId(), KøSortering.FØRSTE_STØNADSDAG);
         entityManager.refresh(liste);
-        assertThat(liste.getSortering()).isEqualTo(KøSortering.BEHANDLINGSFRIST);
+        assertThat(liste.getSortering()).isEqualTo(KøSortering.FØRSTE_STØNADSDAG);
+    }
+
+    @Test
+    void settStandardSorteringNårTilbakebetalingfilterIkkeAktivt() {
+        var liste = OppgaveFiltrering.nyTomOppgaveFiltrering(avdelingDrammen());
+        liste.leggTilFilter(BehandlingType.TILBAKEBETALING);
+        persistAndFlush(liste);
+        avdelingslederTjeneste.settSortering(liste.getId(), KøSortering.BELØP);
+        avdelingslederTjeneste.settSorteringNumeriskIntervall(liste.getId(), 100L, 200L);
+        entityManager.refresh(liste);
+        assertThat(liste)
+            .matches(d -> d.getFra().equals(100L))
+            .matches(d -> d.getTil().equals(200L))
+            .matches(OppgaveFiltrering::getErDynamiskPeriode)
+            .matches(d -> d.getSortering() == KøSortering.BELØP);
+
+        // sett standard sortering når det ikke lenger er filter på behandlingtype tilbakebetaling
+        avdelingslederTjeneste.endreFiltreringBehandlingType(liste.getId(), BehandlingType.TILBAKEBETALING, false);
+        entityManager.refresh(liste);
+        assertThat(liste)
+            .matches(d -> d.getFra() == null)
+            .matches(d -> d.getTil() == null)
+            .matches(d -> !d.getErDynamiskPeriode())
+            .matches(d -> d.getSortering() == KøSortering.BEHANDLINGSFRIST);
     }
 
     @Test
@@ -99,13 +125,13 @@ class AvdelingslederTjenesteTest {
     void leggTilYtelsetypeFiltrering() {
         var oppgaveFiltrering = OppgaveFiltrering.nyTomOppgaveFiltrering(avdelingDrammen());
         persistAndFlush(oppgaveFiltrering);
-        avdelingslederTjeneste.endreFiltreringYtelseType(oppgaveFiltrering.getId(), FagsakYtelseType.ENGANGSTØNAD);
+        avdelingslederTjeneste.endreFagsakYtelseType(oppgaveFiltrering.getId(), FagsakYtelseType.ENGANGSTØNAD, true);
         entityManager.refresh(oppgaveFiltrering);
-        assertThat(oppgaveFiltrering.getFiltreringYtelseTyper()).isNotEmpty();
-        assertThat(oppgaveFiltrering.getFiltreringYtelseTyper().get(0).getFagsakYtelseType()).isEqualTo(FagsakYtelseType.ENGANGSTØNAD);
-        avdelingslederTjeneste.endreFiltreringYtelseType(oppgaveFiltrering.getId(), null);
+        assertThat(oppgaveFiltrering.getFagsakYtelseTyper()).isNotEmpty();
+        assertThat(oppgaveFiltrering.getFagsakYtelseTyper()).first().isEqualTo(FagsakYtelseType.ENGANGSTØNAD);
+        avdelingslederTjeneste.endreFagsakYtelseType(oppgaveFiltrering.getId(), FagsakYtelseType.ENGANGSTØNAD, false);
         entityManager.refresh(oppgaveFiltrering);
-        assertThat(oppgaveFiltrering.getFiltreringYtelseTyper()).isEmpty();
+        assertThat(oppgaveFiltrering.getFagsakYtelseTyper()).isEmpty();
     }
 
     @Test
@@ -115,7 +141,8 @@ class AvdelingslederTjenesteTest {
         avdelingslederTjeneste.endreFiltreringAndreKriterierType(oppgaveFiltrering.getId(), AndreKriterierType.TIL_BESLUTTER, true, true);
         entityManager.refresh(oppgaveFiltrering);
         assertThat(oppgaveFiltrering.getFiltreringAndreKriterierTyper()).isNotEmpty();
-        assertThat(oppgaveFiltrering.getFiltreringAndreKriterierTyper().get(0).getAndreKriterierType()).isEqualTo(AndreKriterierType.TIL_BESLUTTER);
+        assertThat(oppgaveFiltrering.getFiltreringAndreKriterierTyper()).first()
+            .extracting(FiltreringAndreKriterierType::getAndreKriterierType).isEqualTo(AndreKriterierType.TIL_BESLUTTER);
         avdelingslederTjeneste.endreFiltreringAndreKriterierType(oppgaveFiltrering.getId(), AndreKriterierType.TIL_BESLUTTER, false, true);
         entityManager.refresh(oppgaveFiltrering);
         assertThat(oppgaveFiltrering.getFiltreringAndreKriterierTyper()).isEmpty();
