@@ -9,14 +9,13 @@ import static org.mockito.Mockito.when;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import jakarta.persistence.EntityManager;
 
-import org.assertj.core.api.Assertions;
+import no.nav.foreldrepenger.los.DBTestUtil;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -25,14 +24,13 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import no.nav.foreldrepenger.los.JpaExtension;
 import no.nav.foreldrepenger.los.domene.typer.BehandlingId;
+import no.nav.foreldrepenger.los.domene.typer.Saksnummer;
 import no.nav.foreldrepenger.los.domene.typer.aktør.AktørId;
 import no.nav.foreldrepenger.los.oppgave.AndreKriterierType;
-import no.nav.foreldrepenger.los.oppgave.BehandlingStatus;
 import no.nav.foreldrepenger.los.oppgave.BehandlingType;
 import no.nav.foreldrepenger.los.oppgave.FagsakYtelseType;
 import no.nav.foreldrepenger.los.oppgave.Oppgave;
 import no.nav.foreldrepenger.los.oppgave.OppgaveEgenskap;
-import no.nav.foreldrepenger.los.oppgave.OppgaveRepository;
 
 @ExtendWith(JpaExtension.class)
 @ExtendWith(MockitoExtension.class)
@@ -40,102 +38,77 @@ class OppgaveEgenskapHåndtererTest {
 
     private static final BehandlingId BEHANDLING_ID = BehandlingId.random();
 
-    private OppgaveRepository oppgaveRepository;
-    private OppgaveEgenskapHåndterer egenskapHandler;
+    private OppgaveEgenskapHåndterer egenskapHåndterer;
 
     @Mock
     private OppgaveEgenskapFinner oppgaveEgenskapFinner;
     @Mock
     private Beskyttelsesbehov beskyttelsesbehov;
+    private EntityManager entityManager;
 
     @BeforeEach
     void setUp(EntityManager entityManager) {
-        oppgaveRepository = new OppgaveRepository(entityManager);
-        egenskapHandler = new OppgaveEgenskapHåndterer(oppgaveRepository, beskyttelsesbehov);
+        this.entityManager = entityManager;
+        egenskapHåndterer = new OppgaveEgenskapHåndterer(beskyttelsesbehov);
     }
 
     @Test
     void opprettOppgaveEgenskaperTest() {
-        // arrange
-        var ønskedeEgenskaper = kriterieArrayOf(UTLANDSSAK, PAPIRSØKNAD);
-        when(oppgaveEgenskapFinner.getSaksbehandlerForTotrinn()).thenReturn("T12345");
-        when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(Arrays.asList(ønskedeEgenskaper));
+        when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(List.of(UTLANDSSAK, PAPIRSØKNAD));
+        var oppgave = lagOppgave();
 
-        // act
-        egenskapHandler.håndterOppgaveEgenskaper(lagOppgave(), oppgaveEgenskapFinner);
+        egenskapHåndterer.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
 
-        // assert
-        Assertions.assertThat(hentAktiveKriterierPåOppgave(42L)).containsExactlyInAnyOrder(ønskedeEgenskaper);
+        assertThat(oppgave.getOppgaveEgenskaper().stream().map(OppgaveEgenskap::getAndreKriterierType))
+            .containsOnly(UTLANDSSAK, PAPIRSØKNAD);
     }
 
     @Test
     void opprettOppgaveEgenskaperMedKode7Test() {
-        // arrange
-        var ønskedeEgenskaper = kriterieArrayOf(UTLANDSSAK, PAPIRSØKNAD);
-        when(oppgaveEgenskapFinner.getSaksbehandlerForTotrinn()).thenReturn("T12345");
-        when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(Arrays.asList(ønskedeEgenskaper));
+        when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(List.of());
         when(beskyttelsesbehov.getBeskyttelsesKriterier(any())).thenReturn(Set.of(AndreKriterierType.KODE7_SAK));
+        var oppgave = lagOppgave();
 
-        // act
-        egenskapHandler.håndterOppgaveEgenskaper(lagOppgave(), oppgaveEgenskapFinner);
+        egenskapHåndterer.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
 
-        // assert
-        Assertions.assertThat(hentAktiveKriterierPåOppgave(42L)).contains(AndreKriterierType.KODE7_SAK);
+        assertThat(oppgave.getOppgaveEgenskaper().stream().map(OppgaveEgenskap::getAndreKriterierType))
+            .containsOnly(AndreKriterierType.KODE7_SAK);
     }
 
     @Test
     void deaktiverUaktuelleEksisterendeOppgaveEgenskaper() {
         var oppgave = lagOppgave();
-        oppgaveRepository.lagre(new OppgaveEgenskap(oppgave, PAPIRSØKNAD));
+        var uaktuellEgenskap = OppgaveEgenskap.builder().medAndreKriterierType(PAPIRSØKNAD).build();
+        oppgave.leggTilOppgaveEgenskap(uaktuellEgenskap);
         when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(emptyList());
-        egenskapHandler.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
 
-        Assertions.assertThat(hentAktiveKriterierPåOppgave(42L)).isEmpty();
+        egenskapHåndterer.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
+
+        assertThat(oppgave.getOppgaveEgenskaper()).isEmpty();
     }
 
     @Test
     void kunEttAktivtTilfelleAvHverEgenskap() {
         var oppgave = lagOppgave();
-        oppgaveRepository.lagre(new OppgaveEgenskap(oppgave, UTLANDSSAK));
+        oppgave.leggTilOppgaveEgenskap(OppgaveEgenskap.builder().medAndreKriterierType(UTLANDSSAK).build());
+        entityManager.persist(oppgave);
+        entityManager.flush();
+
         when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(List.of(UTLANDSSAK));
-        egenskapHandler.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
 
-        Assertions.assertThat(hentAktiveKriterierPåOppgave(42L)).containsExactly(UTLANDSSAK);
-    }
+        egenskapHåndterer.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
+        entityManager.flush(); // sørge for å trigge orphanremoval / avdekke eventuelle feil med equals etc
+        entityManager.refresh(oppgave);
 
-    @Test
-    void deaktiveringHåndtererDuplikateOppgaveEgenskaper() {
-        // Bug i prod har opprettet dubletter. Tester deaktivering av samtlige dubletter.
-        var oppgave = lagOppgave();
-        oppgaveRepository.lagre(new OppgaveEgenskap(oppgave, PAPIRSØKNAD));
-        oppgaveRepository.lagre(new OppgaveEgenskap(oppgave, PAPIRSØKNAD));
-        oppgaveRepository.lagre(new OppgaveEgenskap(oppgave, PAPIRSØKNAD));
-        oppgaveRepository.lagre(new OppgaveEgenskap(oppgave, UTLANDSSAK));
-        when(oppgaveEgenskapFinner.getAndreKriterier()).thenReturn(emptyList());
-        egenskapHandler.håndterOppgaveEgenskaper(oppgave, oppgaveEgenskapFinner);
-
-        Assertions.assertThat(hentAktiveKriterierPåOppgave(42L)).isEmpty();
-    }
-
-    private static AndreKriterierType[] kriterieArrayOf(AndreKriterierType... kriterier) {
-        return kriterier; // ble hakket penere enn å ha AndreKriterierType[] overalt.
-    }
-
-    private List<AndreKriterierType> hentAktiveKriterierPåOppgave(Long saksnummer) {
-        return oppgaveRepository.hentOppgaveEgenskaper(oppgaveId(saksnummer))
-            .stream()
-            .filter(OppgaveEgenskap::getAktiv)
-            .map(OppgaveEgenskap::getAndreKriterierType)
-            .collect(Collectors.toList());
-    }
-
-    private Long oppgaveId(Long saksnummer) {
-        return oppgaveRepository.hentAktiveOppgaverForSaksnummer(List.of(saksnummer)).stream().map(Oppgave::getId).findFirst().orElseThrow();
+        assertThat(oppgave.getOppgaveEgenskaper()).size().isEqualTo(1);
+        assertThat(oppgave.getOppgaveEgenskaper()).first().matches(oe -> oe.getAndreKriterierType().equals(UTLANDSSAK));
+        var oe = DBTestUtil.hentAlle(entityManager, OppgaveEgenskap.class);
+        assertThat(oe).hasSize(1);
     }
 
     private Oppgave lagOppgave() {
-        var oppgave = Oppgave.builder()
-            .medFagsakSaksnummer(42L)
+        return Oppgave.builder()
+            .medSaksnummer(new Saksnummer("42"))
             .medBehandlingId(BEHANDLING_ID)
             .medAktørId(AktørId.dummy())
             .medFagsakYtelseType(FagsakYtelseType.FORELDREPENGER)
@@ -144,9 +117,6 @@ class OppgaveEgenskapHåndtererTest {
             .medBehandlingsfrist(LocalDateTime.now())
             .medBehandlingOpprettet(LocalDateTime.now())
             .medFørsteStønadsdag(LocalDate.now().plusMonths(1))
-            .medBehandlingStatus(BehandlingStatus.UTREDES)
             .build();
-        oppgaveRepository.lagre(oppgave);
-        return oppgave;
     }
 }
